--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <div id="section_select">
                 <img id="select1" src="image/unselected.png" onclick="changeSection(1);sortParts()">
                 <img id="select2" src="image/unselected.png" onclick="changeSection(2);sortParts()">
-                <img id="select3" src="image/unselected.png" onclick="changeSection(3);sortParts()"> 
+                <img id="select3" src="image/unselected.png" onclick="changeSection(3);sortParts()">
+                <img id="select4" src="image/unselected.png" onclick="changeSection(4);sortParts()">
+                <img id="select5" src="image/unselected.png" onclick="changeSection(5);sortParts()"> 
             </div>
             <!-- Main Table -->
             <div id="container">
@@ -45,7 +47,11 @@
                         <th name="section2">Tolerance<div id="sortable" onclick="sortParts('tolerance')"></div></th>
                         <th name="section3">Rating(A)<div id="sortable" onclick="sortParts('ratingA')"></div></th>
                         <th name="section3">Rating(V)<div id="sortable" onclick="sortParts('ratingV')"></div></th>
-                        <th name="section3">Rating(W)<div id="sortable" onclick="sortParts('ratingW')"></div></th>
+                        <th name="section3">Rating(W)<div id="sortable" onclick="sortParts('ratingW')"></div></th>    
+                        <th name="section4">Projects<div id="sortable" onclick="sortParts('projects')"></div></th>
+                        <th name="section4">Digikey Part #<div id="sortable" onclick="sortParts('digikey')"></div></th>
+                        <th name="section5">Date Added<div id="sortable" onclick="sortParts('date')"></div></th>
+                        <th name="section5">Image<div id="sortable" onclick="sortParts('image')"></div></th>                               
                     </tr>
                 </table>
             </div>
