--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
         <link rel="icon" href="favicon.png">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="styles/about.css">
+        <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
