--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8" />
         <link rel="icon" href="favicon.png">
         <link rel="stylesheet" href="general.css">
+        <link rel="stylesheet" href="styles/home.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
